[workspace]
resolver = "2"

members = ["serde_valid", "serde_valid_derive", "serde_valid_literal"]

[workspace.package]
edition = "2021"
version = "0.21.0"
license = "MIT"
repository = "https://github.com/yassun7010/serde_valid.git"
authors = ["yassun7010 <yassun7010@outlook.com>"]
keywords = ["validation", "serde", "json_schema"]

[workspace.dependencies]
regex = "^1.6"
paste = "^1.0"
serde_json = "^1.0"
serde = "^1.0"
itertools = "0.13.0"
