[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
edition = "2021"
version = "1.0.1"
license = "MIT"
repository = "https://github.com/yassun7010/serde_valid.git"
authors = ["yassun7010 <yassun7010@outlook.com>"]
keywords = ["validation", "serde", "json_schema"]

[workspace.dependencies]
itertools = "0.13.0"
paste = "^1.0"
regex = "^1.6"
serde = "^1.0"
serde_json = "^1.0"
serde_valid_derive = { path = "crates/serde_valid_derive" }
serde_valid_literal = { path = "crates/serde_valid_literal" }
