[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "1.0.5"
authors = ["yassun7010 <yassun7010@outlook.com>"]
edition = "2021"
repository = "https://github.com/yassun7010/serde_valid.git"
license = "MIT"
keywords = ["json_schema", "serde", "validation"]

[workspace.dependencies]
itertools = "0.13.0"
paste = "^1.0"
regex = "^1.6"
serde = "^1.0"
serde_json = "^1.0"
serde_valid_derive = { path = "crates/serde_valid_derive" }
serde_valid_literal = { path = "crates/serde_valid_literal" }
