[package]
name = "axum_serde_valid"
description = "Axum extractor sets of JSON validation."
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "^0.6", optional = true, features = ["axum"] }
async-trait = "^0.1"
axum = "0.6.0-rc.1"
http-body = "^0.4"
jsonschema = { version = "^0.16", default-features = false }
schemars = { version = "^0.8", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
serde_valid = { version = "0.12.0-beta.4", path = "../serde_valid", features = [
    "flatten",
] }
tracing = "^0.1"
