[package]
name = "axum_serde_valid"
description = "Axum extractor sets of JSON validation."
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "^0.10", optional = true, features = ["axum"] }
async-trait = "^0.1"
axum = "^0.6"
http-body = "^0.4"
jsonschema = { version = "^0.17", optional = true }
schemars = { version = "^0.8", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_valid = { version = "0.14.1", path = "../serde_valid", features = [
    "flatten",
] }
tracing = "^0.1"

[dev-dependencies]
hyper = "0.14.23"
mime = "0.3"
tokio = { version = "1.24", features = ["full"] }
tower = { version = "0.4", features = ["util"] }

[features]
default = []
jsonschema = ["dep:jsonschema", "dep:schemars"]
aide = ["dep:aide", "dep:jsonschema", "dep:schemars"]
