[package]
name = "serde_valid_derive"
version = "0.5.1"
authors = ["yassun4dev <yassun4dev@outlook.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yassun4dev/serde_valid.git"
description = "JSON Schema based validation tool using with serde."
categories = ["encoding"]
keywords = ["validation", "serde", "json_schema"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
paste = "1.0.7"
proc-macro-error = "1.0"
proc-macro2 = "^1.0"
quote = "^1.0"
strsim = "0.10.0"
syn = { version = "^1.0", features = ["extra-traits"] }
