[package]
name = "serde_valid_derive_tests"
version = "0.1.0"
authors = ["安谷尚人 <yasutani_naoto@uniquevision.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "^1.7"
regex = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_valid = { version = "0.1.0", path = "../serde_valid", features = ["derive"] }
