[package]
name = "serde_valid_literal"
version = "0.6.1"
authors = ["yassun4dev <yassun4dev@outlook.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yassun4dev/serde_valid.git"
description = "Literal Value type based JSON."
categories = ["encoding"]
keywords = ["json", "literal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.7"
regex = "1.6.0"
