[package]
name = "serde_valid"
description = "JSON Schema based validation tool using with serde."
categories = ["encoding"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent_0 = { package = "fluent", version = "^0.16.0", optional = true }
indexmap = { version = "^1.9", features = ["serde"] }
itertools = "^0.10"
jsonschema = { version = "^0.17", optional = true }
num-traits = "^0.2"
once_cell = "^1.7"
paste = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_toml = { package = "toml", version = "^0.7", optional = true }
serde_valid_derive = { version = "0.16.1", path = "../serde_valid_derive" }
serde_valid_literal = { version = "0.16.1", path = "../serde_valid_literal" }
serde_yaml = { version = "^0.9", optional = true }
thiserror = "^1.0"
unicode-segmentation = "^1.7"

[dev-dependencies]
unic-langid = "0.9.1"

[features]
default = ["i128"]
toml = ["serde_toml"]
yaml = ["serde_yaml"]
i128 = ["num-traits/i128", "indexmap/std", "serde_valid_literal/i128"]
flatten = ["jsonschema"]
fluent = ["fluent_0", "serde_valid_derive/fluent"]
