[package]
name = "serde_valid_derive"
version = "0.1.0"
authors = ["安谷尚人 <yasutani_naoto@uniquevision.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
proc-macro-error = "^1.0"
syn = { version = "^1.0", features = ["extra-traits"] }
quote = "^1.0"
