[package]
name = "serde_valid_derive"
license = "MIT"
repository = "https://github.com/yassun4dev/serde_valid.git"
description = "JSON Schema based validation tool using with serde."
categories = ["encoding"]
authors.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
paste.workspace = true
proc-macro-error = "^1.0"
proc-macro2 = "^1.0"
quote = "^1.0"
strsim = "^0.10"
syn = { version = "^1.0", features = ["extra-traits"] }
