[package]
name = "serde_valid_derive"
description = "JSON Schema based validation tool using with serde."
categories = ["encoding"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
paste = { workspace = true }
proc-macro-error = "^1.0"
proc-macro2 = "^1.0"
quote = "^1.0"
strsim = "0.11.0"
syn = { version = "^2.0", features = ["extra-traits", "full"] }

[features]
default = []
fluent = []
