[package]
name = "serde_valid_literal"
description = "Literal Value type based JSON."
categories = ["axum", "json", "jsonschema", "validation", "serde"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = { workspace = true }
regex = { workspace = true }
