[package]
name = "serde_valid"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "JSON Schema based validation tool using serde."
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fluent = { version = "^0.16.0", optional = true, package = "fluent" }
indexmap = { version = "^2.0", features = ["serde"] }
itertools.workspace = true
num-traits = "^0.2"
once_cell = "^1.7"
paste.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_toml = { version = "^0.8", optional = true, package = "toml" }
serde_valid_derive = { workspace = true }
serde_valid_literal = { workspace = true }
serde_yaml = { version = "^0.9", optional = true }
thiserror = "^1.0"
unicode-segmentation = "^1.7"

[dev-dependencies]
intl-memoizer = "0.5"
unic-langid = "0.9"

[features]
default = ["i128"]
fluent = ["dep:fluent", "serde_valid_derive/fluent"]
i128 = ["indexmap/std", "num-traits/i128", "serde_valid_literal/i128"]
toml = ["serde_toml"]
yaml = ["serde_yaml"]
