[package]
name = "serde_valid_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "JSON Schema based validation tool using serde."
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools.workspace = true
paste.workspace = true
proc-macro-error2 = { version = "2.0.0", default-features = false }
proc-macro2 = "^1.0"
quote = "^1.0"
strsim = "0.11.0"
syn = { version = "^2.0", features = ["extra-traits", "full"] }

[features]
default = []
fluent = []
