[package]
name = "serde_valid_literal"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Literal Value type based JSON."
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = { workspace = true }
regex = { workspace = true }

[features]
default = []
i128 = []
