[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.6.2", features = ["axum", "macros"] }
axum = { workspace = true, features = ["macros"] }
config = "0.13.2"
dotenv = "0.15.0"
schemars = { version = "0.8.10", features = ["uuid1"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_valid = "0.11.3"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
typed-builder = "0.11.0"
